--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
         <section class="textmarginbot">
             <div class="container">
+                <h2 class="visually-hidden">Title<h2>
                 <ul class="block">
         <li class="blockwdt">
         <div class="block-icon"><svg class="block-icon-item" width="64px" height="64px">
@@ -87,29 +88,29 @@
             <ul class="social">
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
-                        <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/icons.svg#icon-facebook"></use>
+                        <svg class="social-icon-color" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
-                        <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/icons.svg#icon-instagram"></use>
+                        <svg class="social-icon-color" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
-                        <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/icons.svg#icon-twitter"></use>
+                        <svg class="social-icon-color" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
-                        <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/icons.svg#icon-linkedin"></use>
+                        <svg class="social-icon-color" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
@@ -125,28 +126,28 @@
                 <ul class="social">
                     <li class="social-icon">
                         <a href="" class="social-icon-link">
-                            <svg class="social-icon-color" width="16px" height="16px">
+                            <svg class="social-icon-color" width="16" height="16">
                                 <use href="images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icon">
                         <a href="" class="social-icon-link">
-                            <svg class="social-icon-color" width="16px" height="16px">
+                            <svg class="social-icon-color" width="16" height="16">
                                 <use href="images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icon">
                         <a href="" class="social-icon-link">
-                            <svg class="social-icon-color" width="16px" height="16px">
+                            <svg class="social-icon-color" width="16" height="16">
                                 <use href="images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icon">
                         <a href="" class="social-icon-link">
-                            <svg class="social-icon-color" width="16px" height="16px">
+                            <svg class="social-icon-color" width="16" height="16">
                                 <use href="images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
@@ -163,29 +164,29 @@
             <ul class="social">
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
-                        <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/icons.svg#icon-facebook"></use>
+                        <svg class="social-icon-color" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
-                        <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/icons.svg#icon-instagram"></use>
+                        <svg class="social-icon-color" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
-                        <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/icons.svg#icon-twitter"></use>
+                        <svg class="social-icon-color" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
-                        <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/icons.svg#icon-linkedin"></use>
+                        <svg class="social-icon-color" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
@@ -201,29 +202,29 @@
             <ul class="social">
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
-                        <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/icons.svg#icon-facebook"></use>
+                        <svg class="social-icon-color" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
-                        <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/icons.svg#icon-instagram"></use>
+                        <svg class="social-icon-color" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
-                        <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/icons.svg#icon-twitter"></use>
+                        <svg class="social-icon-color" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-icon">
                     <a href="" class="social-icon-link">
-                        <svg class="social-icon-color" width="16px" height="16px">
-                            <use href="images/icons.svg#icon-linkedin"></use>
+                        <svg class="social-icon-color" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
@@ -231,6 +232,30 @@
         </div>
     </li>
 </ul>
+
+
+<section class="our-portfolio">
+    <div class="container">
+    <h2 class="cloudtext">Our Portfolio</h2>
+    
+
+<ul class="images">
+    <li class="imagesbasis"> <img src="./images/img.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Banking App Interface Concept </h2><p class="description">App</p></div></li>
+    <li class="imagesbasis"><img src="./images/bgcolor.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Cashless Payment</h2><p class="description">Marketing</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-2.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Meditaion App</h2><p class="description">App</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-3.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Taxi Service</h2><p class="description">Marketing</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-4.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Screen Illustrations</h2><p class="description">Design</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img-5.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Online Courses</h2><p class="description">Marketing</p></div></li>
+</ul>
+
+
+</div>
+</section>
+
+
+
+
+
 
 </div>
 </section>
@@ -247,29 +272,29 @@
     <ul class="p-social">
         <li class="social-icon">
             <a href="" class="social-icon-link">
-                <svg class="social-icon-color" width="24px" height="24px">
-                    <use href="images/icons.svg#icon-facebook"></use>
+                <svg class="social-icon-color" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
             </a>
         </li>
         <li class="social-icon">
             <a href="" class="social-icon-link">
-                <svg class="social-icon-color" width="24px" height="24px">
-                    <use href="images/icons.svg#icon-instagram"></use>
+                <svg class="social-icon-color" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
             </a>
         </li>
         <li class="social-icon">
             <a href="" class="social-icon-link">
-                <svg class="social-icon-color" width="24px" height="24px">
-                    <use href="images/icons.svg#icon-twitter"></use>
+                <svg class="social-icon-color" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
             </a>
         </li>
         <li class="social-icon">
             <a href="" class="social-icon-link">
-                <svg class="social-icon-color" width="24px" height="24px">
-                    <use href="images/icons.svg#icon-linkedin"></use>
+                <svg class="social-icon-color" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
             </a>
         </li>
