--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             </div>
         </section> 
 
-        <section class="textmarginbot">
+<section class="textmarginbot">
+            <h2 class="visually-hidden">Title</h2>
             <div class="container">
-                <h2 class="visually-hidden">Title<h2>
                 <ul class="block">
         <li class="blockwdt">
         <div class="block-icon"><svg class="block-icon-item" width="64px" height="64px">
@@ -70,7 +70,7 @@
         <p class="minortext">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
     </li>
 </ul>
-</div>
+        </div>
 </section>
 
 
@@ -117,7 +117,6 @@
             </ul>
         </div>
     </li>
-
         <li class="employeecard">
             <img src="images/img-2.jpeg" alt="Employee" width="264" height="260">
             <div class="paddingcloud">
@@ -193,7 +192,6 @@
             </ul>
         </div>
     </li>
-    
     <li class="employeecard">
         <img src="images/img-4.jpeg" alt="Employee" width="264" height="260">
         <div class="paddingcloud">
@@ -232,8 +230,10 @@
         </div>
     </li>
 </ul>
+</div>
 
 </section>
+
 <section class="our-portfolio">
     <div class="container">
     <h2 class="cloudtext">Our Portfolio</h2>
@@ -249,15 +249,11 @@
 </ul>
 
 
-</div>
-</section>
+</div> </section>
 
 
 
 
-
-
-</div>
 
 </main>
 <footer class="containerfoot" >
