--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="containertop">
-        <div class="container" style="display: flex;">
+        <div class="container" style="display: flex">
             <nav class="site-nav">
                 <a href="./index.html" class="logo"> <span class="web"> WEB </span> STUDIO </a>
                 <ul class="button-list">
