--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </nav>
             <address class="address">
             <ul class="contact-list">
-                <li class="makeflex"><a href="mailto:info@devstudio.com" class="addresslink">info@devstudio.com</a> </li>
-                <li class="makeflex"><a href="tel:+110001111111" class="address">+110001111111</a> </li>
+                <li class="button-item"><a href="mailto:info@devstudio.com" class="addresslink">info@devstudio.com</a> </li>
+                <li class="button-item"><a href="tel:+110001111111" class="addresslink">+110001111111</a> </li>
             </ul>
             </address>
         </div>
