--- a/index.html
+++ b/index.html
@@ -267,28 +267,28 @@
     <p class="p-bottom">Social media</p>
     <ul class="p-social">
         <li class="social-icon">
-            <a href="" class="social-icon-link">
+            <a href="" class="social-icon-link-foot">
                 <svg class="social-icon-color" width="24" height="24">
                     <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
             </a>
         </li>
         <li class="social-icon">
-            <a href="" class="social-icon-link">
+            <a href="" class="social-icon-link-foot">
                 <svg class="social-icon-color" width="24" height="24">
                     <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
             </a>
         </li>
         <li class="social-icon">
-            <a href="" class="social-icon-link">
+            <a href="" class="social-icon-link-foot">
                 <svg class="social-icon-color" width="24" height="24">
                     <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
             </a>
         </li>
         <li class="social-icon">
-            <a href="" class="social-icon-link">
+            <a href="" class="social-icon-link-foot">
                 <svg class="social-icon-color" width="24" height="24">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
