--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
                 <h2 class="visually-hidden">Title</h2>
                 <ul class="block">
         <li class="blockwdt">
-        <div class="block-icon"><svg class="block-icon-item" width="64px" height="64px">
+        <div class="block-icon"><svg class="block-icon-item" width="64" height="64">
             <use href="./images/icons.svg#icon-antenna"></use>
         </svg></div>
         <h3 class="maintext">Strategy</h3>
         <p class="minortext">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
     </li>
     <li class="blockwdt">
-        <div class = "block-icon"><svg class="block-icon-item" width="64px" height="64px">
+        <div class = "block-icon"><svg class="block-icon-item" width="64" height="64">
             <use href="./images/icons.svg#icon-clock"></use>
         </svg></div>
         <h3 class="maintext">Punctuality</h3>
         <p class="minortext">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
     <li class="blockwdt">
-        <div class = "block-icon"><svg class="block-icon-item" width="64px" height="64px">
+        <div class = "block-icon"><svg class="block-icon-item" width="64" height="64">
             <use href="./images/icons.svg#icon-diagram"></use>
         </svg></div>
         <h3 class="maintext">Diligence</h3>
         <p class="minortext">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
     </li>
     <li class="blockwdt">
-        <div class = "block-icon"><svg class="block-icon-item" width="64px" height="64px">
+        <div class = "block-icon"><svg class="block-icon-item" width="64" height="64">
             <use href="./images/icons.svg#icon-astronaut"></use>
         </svg></div>
         <h3 class="maintext">Technologies</h3>
