--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
 </section>
 
 <section class="our-portfolio">
-    <div class="container">
+    <div class="container-portfolio">
     <h2 class="cloudtext">Our Portfolio</h2>
     
 
 <ul class="images">
-    <li class="imagesbasis"> <img src="./images/img.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Banking App Interface Concept </h2><p class="description">App</p></div></li>
+    <li class="imagesbasis"> <img src="./images/img.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Banking App Interface Concept </h2><p class="description">App </p></div></li>
     <li class="imagesbasis"><img src="./images/bgcolor.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Cashless Payment</h2><p class="description">Marketing</p></div></li>
     <li class="imagesbasis"> <img src="./images/img-2.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Meditaion App</h2><p class="description">App</p></div></li>
     <li class="imagesbasis"> <img src="./images/img-3.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Taxi Service</h2><p class="description">Marketing</p></div></li>
