--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
     
 
 <ul class="images">
-    <li class="imagesbasis"> <img src="./images/img.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Banking App Interface Concept </h2><p class="description">App </p></div></li>
-    <li class="imagesbasis"><img src="./images/bgcolor.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Cashless Payment</h2><p class="description">Marketing</p></div></li>
-    <li class="imagesbasis"> <img src="./images/img-2.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Meditaion App</h2><p class="description">App</p></div></li>
-    <li class="imagesbasis"> <img src="./images/img-3.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Taxi Service</h2><p class="description">Marketing</p></div></li>
-    <li class="imagesbasis"> <img src="./images/img-4.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Screen Illustrations</h2><p class="description">Design</p></div></li>
-    <li class="imagesbasis"> <img src="./images/img-5.jpg" alt="No photo"> <div class="imagesdiv"><h2 class="namep">Online Courses</h2><p class="description">Marketing</p></div></li>
+    <li class="imagesbasis"><div class="imagesdiv"><img src="./images/img.jpg" alt="No photo"> ><h2 class="namep">Banking App Interface Concept </h2><p class="description">App </p></div></li>
+    <li class="imagesbasis"><div class="imagesdiv"><img src="./images/bgcolor.jpg" alt="No photo"> ><h2 class="namep">Cashless Payment</h2><p class="description">Marketing</p></div></li>
+    <li class="imagesbasis"><div class="imagesdiv"><img src="./images/img-2.jpg" alt="No photo"> ><h2 class="namep">Meditaion App</h2><p class="description">App</p></div></li>
+    <li class="imagesbasis"><div class="imagesdiv"><img src="./images/img-3.jpg" alt="No photo"> ><h2 class="namep">Taxi Service</h2><p class="description">Marketing</p></div></li>
+    <li class="imagesbasis"><div class="imagesdiv"> <img src="./images/img-4.jpg" alt="No photo"> ><h2 class="namep">Screen Illustrations</h2><p class="description">Design</p></div></li>
+    <li class="imagesbasis"><div class="imagesdiv"><img src="./images/img-5.jpg" alt="No photo"> ><h2 class="namep">Online Courses</h2><p class="description">Marketing</p></div></li>
 </ul>
 
 
