--- a/index.html
+++ b/index.html
@@ -235,23 +235,133 @@
 
 </section>
 
-<section class="our-portfolio">
-    <div class="container-portfolio">
-    <h2 class="cloudtext">Our Portfolio</h2>
-    
+<section class="portfolio-list">
+    <div class="container">
+      <h2 class="portfolio-list-title">Our Portfolio</h2>
+      <ul class="list">
+        <li class="portfolio-item">
+          <div class="image-box">
+            <img
+              src="./images/portfolio1.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <p class="overlay">
+              14 Stylish and User-Friendly App Design Concepts · Task
+              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+              · Cloud Storage App
+            </p>
+          </div>
+          <div class="name">
+            <h3 class="list-title">Banking App</h3>
+            <p class="list-text">App</p>
+          </div>
+        </li>
 
-<ul class="images">
-    <li class="imagesbasis"><div class="imagesdiv"><img src="./images/img.jpg" alt="No photo"> ><h2 class="namep">Banking App Interface Concept </h2><p class="description">App </p></div></li>
-    <li class="imagesbasis"><div class="imagesdiv"><img src="./images/bgcolor.jpg" alt="No photo"> ><h2 class="namep">Cashless Payment</h2><p class="description">Marketing</p></div></li>
-    <li class="imagesbasis"><div class="imagesdiv"><img src="./images/img-2.jpg" alt="No photo"> ><h2 class="namep">Meditaion App</h2><p class="description">App</p></div></li>
-    <li class="imagesbasis"><div class="imagesdiv"><img src="./images/img-3.jpg" alt="No photo"> ><h2 class="namep">Taxi Service</h2><p class="description">Marketing</p></div></li>
-    <li class="imagesbasis"><div class="imagesdiv"> <img src="./images/img-4.jpg" alt="No photo"> ><h2 class="namep">Screen Illustrations</h2><p class="description">Design</p></div></li>
-    <li class="imagesbasis"><div class="imagesdiv"><img src="./images/img-5.jpg" alt="No photo"> ><h2 class="namep">Online Courses</h2><p class="description">Marketing</p></div></li>
-</ul>
+        <li class="portfolio-item">
+          <div class="image-box">
+            <img
+              src="./images/portfolio2.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <p class="overlay">
+              14 Stylish and User-Friendly App Design Concepts · Task
+              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+              · Cloud Storage App
+            </p>
+          </div>
+          <div class="name">
+            <h3 class="list-title">Cashless Payment</h3>
+            <p class="list-text">Marketing</p>
+          </div>
+        </li>
 
+        <li class="portfolio-item">
+          <div class="image-box">
+            <img
+              src="./images/portfolio3.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <p class="overlay">
+              14 Stylish and User-Friendly App Design Concepts · Task
+              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+              · Cloud Storage App
+            </p>
+          </div>
+          <div class="name">
+            <h3 class="list-title">Meditation App</h3>
+            <p class="list-text">App</p>
+          </div>
+        </li>
 
-</div> </section>
+        <li class="portfolio-item">
+          <div class="image-box">
+            <img
+              src="./images/portfolio4.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <p class="overlay">
+              14 Stylish and User-Friendly App Design Concepts · Task
+              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+              · Cloud Storage App
+            </p>
+          </div>
+          <div class="name">
+            <h3 class="list-title">Taxi Service</h3>
+            <p class="list-text">Marketing</p>
+          </div>
+        </li>
 
+        <li class="portfolio-item">
+          <div class="image-box">
+            <img
+              src="./images/portfolio5.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <p class="overlay">
+              114 Stylish and User-Friendly App Design Concepts · Task
+              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+              · Cloud Storage App
+            </p>
+          </div>
+          <div class="name">
+            <h3 class="list-title">Screen Illustrations</h3>
+            <p class="list-text">Design</p>
+          </div>
+        </li>
+
+        <li class="portfolio-item">
+          <div class="image-box">
+            <img
+              src="./images/portfolio6.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <p class="overlay">
+              14 Stylish and User-Friendly App Design Concepts · Task
+              Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+              · Cloud Storage App
+            </p>
+          </div>
+          <div class="name">
+            <h3 class="list-title">Online Courses</h3>
+            <p class="list-text">Marketing</p>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+</main>
 
 
 
