--- a/index.html
+++ b/index.html
@@ -127,28 +127,28 @@
                     <li class="social-icon">
                         <a href="" class="social-icon-link">
                             <svg class="social-icon-color" width="16" height="16">
-                                <use href="images/icons.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icon">
                         <a href="" class="social-icon-link">
                             <svg class="social-icon-color" width="16" height="16">
-                                <use href="images/icons.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icon">
                         <a href="" class="social-icon-link">
                             <svg class="social-icon-color" width="16" height="16">
-                                <use href="images/icons.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icon">
                         <a href="" class="social-icon-link">
                             <svg class="social-icon-color" width="16" height="16">
-                                <use href="images/icons.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
