--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <ul class="botimages">
     <li class="employeecard">
-        <img src="images/img.jpeg" alt="Employee" width="264" height="260">
+        <img src="./images/img.jpeg" alt="Employee" width="264" height="260">
         <div class="paddingcloud">
             <h3 class="name">Mark Guerrero</h3>
             <p class="job">Product Designer</p>
@@ -119,7 +119,7 @@
         </div>
     </li>
         <li class="employeecard">
-            <img src="images/img-2.jpeg" alt="Employee" width="264" height="260">
+            <img src="./images/img-2.jpeg" alt="Employee" width="264" height="260">
             <div class="paddingcloud">
                 <h3 class="name">Tom Ford</h3>
                 <p class="job">Frontend Developer</p>
@@ -157,7 +157,7 @@
         </li>
         
     <li class="employeecard">
-        <img src="images/img-3.jpeg" alt="Employee" width="264" height="260">
+        <img src="./images/img-3.jpeg" alt="Employee" width="264" height="260">
         <div class="paddingcloud">
             <h3 class="name">Camila Garcia</h3>
             <p class="job">Marketing</p>
