--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         </div>
     </li>
     <li class="employeecard">
-        <img src="images/img-4.jpeg" alt="Employee" width="264" height="260">
+        <img src="./images/img-4.jpeg" alt="Employee" width="264" height="260">
         <div class="paddingcloud">
             <h3 class="name">Daniel Wilson</h3>
             <p class="job">UI Designer</p>
