--- a/index.html
+++ b/index.html
@@ -614,5 +614,12 @@
         </div>
       </div>
     </footer>
+    <!--Modal window-->>
+    <div class="backdrop is-open">
+        <div class="modal>
+          <button class="modal-btn" type="button"></button>
+        
+        </div>
+    </div>
   </body>
 </html>
