--- a/index.html
+++ b/index.html
@@ -612,14 +612,112 @@
             </li>
           </ul>
         </div>
+        <div class="footer-wraper">
+          <p class="wrapper-caption">Subscribe</p>
+          <form  class="subscribe-form" name="Subscribe">
+            <label class="subscribe-form-field">
+              <input class="subscribe-form-input" type="email", placeholder="E-mail"/>
+            </label>
+            <button class="subscribe-form-btn" type="submit">
+              Subscribe
+              <svg class="subscribe-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
-    <!--Modal window-->>
+        <!--Modal window-->
     <div class="backdrop is-open">
-        <div class="modal>
-          <button class="modal-btn" type="button"></button>
-        
+      <div class="modal">
+        <button class="modal-btn" type="button" aria-label="Modal close button">
+          <svg class="modal-btn-icon" width = "8" heigth = "8">
+            <use href ="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+
+
+
+        <p class="modal-caption">Leave your contacts and we will call you back</p>
+
+
+
+
+        <form class="modal-form" name="modal">
+        <div class="form-wrapper">
+          <label class="form-label" for="user_name">Name</label>
+          <div class="form-field">
+            <input 
+            class="form-input" 
+            type="text" 
+            name="user_name"/>
+            <svg class="form-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-user"></use>
+            </svg>
+          </div>
         </div>
-    </div>
+
+
+
+        <div class="form-wrapper">
+          <label class="form-label" for="user_name">Phone</label>
+          <div class="form-field">
+            <input 
+            class="form-input" 
+            type="text" 
+            name="user_name"/>
+            <svg class="form-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
+        </div>
+
+
+
+        <div class="form-wrapper">
+          <label class="form-label" for="user_name">Email</label>
+          <div class="form-field">
+            <input 
+            class="form-input" 
+            type="text" 
+            name="user_name"/>
+            <svg class="form-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
+        </div>
+
+        <div class="form-wrapper">
+          <label for="user-message" class="form-label">Comment</label>
+          <textarea 
+          class="form-message"
+          name="user-message" 
+          id="user-message" 
+          rows="5" 
+          placeholder="Text input"></textarea>
+        </div>
+
+
+
+        <label class="form-agreement">
+          <input class="checkbox visually-hidden"
+          type="checkbox" 
+          name="usr-agreement" 
+          value="false"/>
+          <span class="form-agreement-checkbox">
+            <svg class="form-agreement-icon" width="10" height="10">
+              <use href="./images/icons.svg#icon-checkbox"></use>
+            </svg>
+          </span>
+          I accept the terms and conditions of the
+          <a class="form-agreement-link" href="">Privacy Policy</a>
+        </label>
+
+
+        <button class="form-btn" type="submit">Send</button>
+        </form>
+      </div>
+  </div>
   </body>
 </html>
