--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
         </div>
         <div class="footer-wraper">
           <p class="wrapper-caption">Subscribe</p>
-          <form  class="subscribe-form" name="Subscribe">
+          <form  class="subscribe-form" name="subscribe">
             <label class="subscribe-form-field">
               <input class="subscribe-form-input" type="email", placeholder="E-mail"/>
             </label>
