--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
     <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-btn" type="button" aria-label="Modal close button">
-          <svg class="modal-btn-icon" width="8" heigth="8">
+          <svg class="modal-btn-icon" width="8" height="8">
             <use href ="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
