--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
         </div>
 
         <div class="form-wrapper">
-          <label for="user-message" class="form-label">Comment</label>
+          <label class="form-label" for="user-message" >Comment</label>
           <textarea 
           class="form-message"
           name="user-message" 
