--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
 
 
         <div class="form-wrapper">
-          <label class="form-label" for="user_name">Phone</label>
+          <label class="form-label" for="user-name">Phone</label>
           <div class="form-field">
             <input 
             class="form-input" 
@@ -676,13 +676,13 @@
 
 
         <div class="form-wrapper">
-          <label class="form-label" for="user_name">Email</label>
+          <label class="form-label" for="user-email">Email</label>
           <div class="form-field">
             <input 
             class="form-input" 
             type="text" 
             name="user_name"/>
-            <svg class="form-icon" width="24" height="24">
+            <svg class="form-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>
           </div>
