--- a/index.html
+++ b/index.html
@@ -692,8 +692,8 @@
           <label class="form-label" for="user-message" >Comment</label>
           <textarea 
           class="form-message"
-          name="user-message" 
-          id="user-message" 
+          name="user-comment" 
+          id="user-comment" 
           rows="5" 
           placeholder="Text input"></textarea>
         </div>
