--- a/index.html
+++ b/index.html
@@ -699,9 +699,9 @@
         </div>
 
 
-
-        <label class="form-agreement">
+        <div class="form-agreement">
           <input class="checkbox visually-hidden"
+          id="user-privacy"
           type="checkbox" 
           name="usr-agreement" 
           value="false"/>
@@ -712,8 +712,7 @@
           </span>
           I accept the terms and conditions of the
           <a class="form-agreement-link" href="">Privacy Policy</a>
-        </label>
-
+        </div>
 
         <button class="form-btn" type="submit">Send</button>
         </form>
