--- a/index.html
+++ b/index.html
@@ -646,12 +646,13 @@
 
         <form class="modal-form" name="modal">
         <div class="form-wrapper">
-          <label class="form-label" for="user_name">Name</label>
+          <label class="form-label" for="user-name">Name</label>
           <div class="form-field">
             <input 
             class="form-input" 
-            type="text" 
-            name="user_name"/>
+            type="text"
+            id="user-name"
+            name="user-name"/>
             <svg class="form-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-user"></use>
             </svg>
@@ -661,7 +662,7 @@
 
 
         <div class="form-wrapper">
-          <label class="form-label" for="user-name">Phone</label>
+          <label class="form-label" for="user-phone">Phone</label>
           <div class="form-field">
             <input 
             class="form-input" 
