--- a/index.html
+++ b/index.html
@@ -666,8 +666,8 @@
           <div class="form-field">
             <input 
             class="form-input" 
-            type="text" 
-            name="user_name"/>
+            type="text"
+            name="user-phone"/>
             <svg class="form-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-phone"></use>
             </svg>
@@ -690,7 +690,7 @@
         </div>
 
         <div class="form-wrapper">
-          <label class="form-label" for="user-message" >Comment</label>
+          <label class="form-label" for="user-comment" >Comment</label>
           <textarea 
           class="form-message"
           name="user-comment" 
@@ -701,11 +701,12 @@
 
 
         <div class="form-agreement">
+          <label for="user-privacy">
           <input class="checkbox visually-hidden"
           id="user-privacy"
           type="checkbox" 
-          name="usr-agreement" 
-          value="false"/>
+          name="user-privacy" 
+          value="true"/>
           <span class="form-agreement-checkbox">
             <svg class="form-agreement-icon" width="10" height="10">
               <use href="./images/icons.svg#icon-checkbox"></use>
@@ -713,6 +714,7 @@
           </span>
           I accept the terms and conditions of the
           <a class="form-agreement-link" href="">Privacy Policy</a>
+          </label>
         </div>
 
         <button class="form-btn" type="submit">Send</button>
