--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
             <input 
             class="form-input" 
             type="text" 
-            name="user_name"/>
+            name="user-email"/>
             <svg class="form-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>
