--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
           <p class="wrapper-caption">Subscribe</p>
           <form  class="subscribe-form" name="subscribe">
             <label class="subscribe-form-field">
-              <input class="subscribe-form-input" type="email", placeholder="E-mail"/>
+              <input class="subscribe-form-input" type="email" placeholder="E-mail"/>
             </label>
             <button class="subscribe-form-btn" type="submit">
               Subscribe
@@ -667,6 +667,7 @@
             <input 
             class="form-input" 
             type="text"
+            id="user-phone"
             name="user-phone"/>
             <svg class="form-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-phone"></use>
@@ -682,6 +683,7 @@
             <input 
             class="form-input" 
             type="text" 
+            id="user-email"
             name="user-email"/>
             <svg class="form-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-email"></use>
