--- a/index.html
+++ b/index.html
@@ -709,6 +709,7 @@
           type="checkbox" 
           name="user-privacy" 
           value="true"/>
+          <label class="form-label for="user-privacy"></label>
           <span class="form-agreement-checkbox">
             <svg class="form-agreement-icon" width="10" height="10">
               <use href="./images/icons.svg#icon-checkbox"></use>
@@ -716,7 +717,7 @@
           </span>
           I accept the terms and conditions of the
           <a class="form-agreement-link" href="">Privacy Policy</a>
-          
+        </label>
         </div>
 
         <button class="form-btn" type="submit">Send</button>
