--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
           <p class="wrapper-caption">Subscribe</p>
           <form  class="subscribe-form" name="subscribe">
             <label class="subscribe-form-field">
-              <input class="subscribe-form-input" type="email" placeholder="E-mail"/>
+              <input class="subscribe-form-input" type="email" placeholder="E-mail" name="subscribe"/>
             </label>
             <button class="subscribe-form-btn" type="submit">
               Subscribe
