--- a/index.html
+++ b/index.html
@@ -703,13 +703,12 @@
 
 
         <div class="form-agreement">
-          
           <input class="checkbox visually-hidden"
           id="user-privacy"
           type="checkbox" 
           name="user-privacy" 
           value="true"/>
-          <label class="form-label for="user-privacy"></label>
+          <label class="form-label for="user-privacy">
           <span class="form-agreement-checkbox">
             <svg class="form-agreement-icon" width="10" height="10">
               <use href="./images/icons.svg#icon-checkbox"></use>
@@ -719,7 +718,6 @@
           <a class="form-agreement-link" href="">Privacy Policy</a>
         </label>
         </div>
-
         <button class="form-btn" type="submit">Send</button>
         </form>
       </div>
