--- a/index.html
+++ b/index.html
@@ -703,21 +703,24 @@
 
 
         <div class="form-agreement">
-          <input class="checkbox visually-hidden"
-          id="user-privacy"
-          type="checkbox" 
-          name="user-privacy" 
-          value="true"/>
-          <label class="form-label for="user-privacy">
-          <span class="form-agreement-checkbox">
-            <svg class="form-agreement-icon" width="10" height="10">
-              <use href="./images/icons.svg#icon-checkbox"></use>
-            </svg>
-          </span>
-          I accept the terms and conditions of the
-          <a class="form-agreement-link" href="">Privacy Policy</a>
-        </label>
+          <input
+            class="checkbox visually-hidden"
+            id="user-privacy"
+            type="checkbox"
+            name="user-privacy"
+            value="true"
+          />
+          <label class="form-label" for="user-privacy">
+            <span class="form-agreement-checkbox">
+              <svg class="form-agreement-icon" width="10" height="10">
+                <use href="./images/icons.svg#icon-checkbox"></use>
+              </svg>
+            </span>
+            I accept the terms and conditions of the
+            <a class="form-agreement-link" href="">Privacy Policy</a>
+          </label>
         </div>
+        
         <button class="form-btn" type="submit">Send</button>
         </form>
       </div>
