--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
           </div>
         </div>
 
-        <div class="form-wrapper">
+        <div class="form-wrapper-comment">
           <label class="form-label" for="user-comment" >Comment</label>
           <textarea 
           class="form-message"
