--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
       <div class="container">
         <nav class="nav-menu">
           <a href="./index.html" class="logo"
-            >Web<span class="logo-text">Studio</span></a
-          >
+            >Web<span class="logo-text">Studio</span></a>
 
+
+            <button class="menu-btn" type="button" aria-label="Open menu butten"> <svg class="menu-btn-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-menu"></use>
+            </svg>
+            </button>
           <ul class="navigation">
             <li>
               <a class="link current" href="./index.html">Studio</a>
