--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer hide">
       <div class="container">
         <div class="logo-box">
           <a href="./index.html" class="logo"
@@ -632,8 +632,93 @@
         </div>
       </div>
     </footer>
+
+<footer class="web-footer">
+  <div class="web-footer-container container">
+    <div class="web-footer-top">
+      <a class="web-footer-logo" href="" > <span>Web</span> Studio</a>
+      <p class="web-footer-desc">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div>
+  
+  <div class="web-footer-mid">
+      <p class="web-footer-caption">Social media</p>
+      <ul class="mobile-menu-socials socials">
+        <li class="socials-item">
+          <a
+          class="socials-link"
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener no-referrer"
+            aria-label="Instagram site"
+          >
+            <svg class="icon" height="24" width="24">
+              <use
+                href="./images/icons.svg#icon-instagram-icon"
+              ></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a
+          class="socials-link"
+            href="https://www.twitter.com/"
+            target="_blank"
+            rel="noopener no-referrer"
+            aria-label="Twitter site"
+          >
+            <svg class="icon" height="24" width="24">
+              <use href="./images/icons.svg#icon-twitter-icon"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a
+          class="socials-link"
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener no-referrer"
+            aria-label="Facebook site"
+          >
+            <svg class="icon" height="24" width="24">
+              <use href="./images/icons.svg#icon-facebook-icon"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a
+          class="socials-link"
+            href="https://www.linkedin.com/"
+            target="_blank"
+            rel="noopener no-referrer"
+            aria-label="Linkedin site"
+          >
+            <svg class="icon" height="24" width="24">
+              <use href="./images/icons.svg#icon-linkedin-icon"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+  </div>
+</div>
+<div class="web-footer-bottom">
+    <p class="web-footer-caption">Subscribe</p>
+    <form class="web-footer-form">
+      <label class="web-footer-label">
+        <input class="web-footer-input" type="email" placeholder="Email">
+      </label>
+      <button class="web-footer-btn" type="submit">Subscribe
+                      <svg class="subscribe-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+      </button>
+    </form>
+  </div>
+</div>
+</footer>
+
+
         <!--Modal window-->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-btn" type="button" aria-label="Modal close button">
           <svg class="modal-btn-icon" width="8" height="8">
@@ -728,6 +813,90 @@
         <button class="form-btn" type="submit">Send</button>
         </form>
       </div>
+  </div>
+
+<!--Mobile menu-->
+
+
+<div class="mobile-menu">
+  <button class="menu-btn" type="button">
+    <svg class="menu-btn-icon" width="24" heigth="24">
+      <use href="./images/icons.svg#icon-close"></use>
+    </svg>
+  </button>
+<ul class="mobile-menu-list">
+  <li class="mobile-menu-item">
+    <a class="mobile-menu-link current" href="" >Studio</a></li>
+  <li class="mobile-menu-item">
+    <a class="mobile-menu-link" href="" >Portfolio</a></li>
+  <li class="mobile-menu-item">
+    <a  class="mobile-menu-link" href="">Contacts</a></li>
+</ul>
+
+<ul class="mobile-menu-contacts">
+  <li class="mobile-menu-item">
+    <a class="mobile-menu-contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+  <li class="mobile-menu-item">
+    <a class="mobile-menu-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+</ul>
+
+<ul class="mobile-menu-socials socials">
+  <li class="socials-item">
+    <a
+    class="socials-link"
+      href="https://www.instagram.com/"
+      target="_blank"
+      rel="noopener no-referrer"
+      aria-label="Instagram site"
+    >
+      <svg class="icon" height="24" width="24">
+        <use
+          href="./images/icons.svg#icon-instagram-icon"
+        ></use>
+      </svg>
+    </a>
+  </li>
+  <li class="socials-item">
+    <a
+    class="socials-link"
+      href="https://www.twitter.com/"
+      target="_blank"
+      rel="noopener no-referrer"
+      aria-label="Twitter site"
+    >
+      <svg class="icon" height="24" width="24">
+        <use href="./images/icons.svg#icon-twitter-icon"></use>
+      </svg>
+    </a>
+  </li>
+  <li class="socials-item">
+    <a
+    class="socials-link"
+      href="https://www.facebook.com/"
+      target="_blank"
+      rel="noopener no-referrer"
+      aria-label="Facebook site"
+    >
+      <svg class="icon" height="24" width="24">
+        <use href="./images/icons.svg#icon-facebook-icon"></use>
+      </svg>
+    </a>
+  </li>
+  <li class="socials-item">
+    <a
+    class="socials-link"
+      href="https://www.linkedin.com/"
+      target="_blank"
+      rel="noopener no-referrer"
+      aria-label="Linkedin site"
+    >
+      <svg class="icon" height="24" width="24">
+        <use href="./images/icons.svg#icon-linkedin-icon"></use>
+      </svg>
+    </a>
+  </li>
+</ul>
+
   </div>
   </body>
 </html>
