--- a/index.html
+++ b/index.html
@@ -896,11 +896,27 @@
       <label class="web-footer-label">
         <input class="web-footer-input" type="email" placeholder="Email">
       </label>
+
+
+      <button class="subscribe-form-btn" type="submit">
+        Subscribe
+        <svg class="subscribe-form-icon" width="24" height="24">
+          <use href="./images/icons.svg#icon-send"></use>
+        </svg>
+      </button>
+
+
+
+      <!--
+
       <button class="web-footer-btn" type="submit">Subscribe
                       <svg class="subscribe-form-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
       </button>
+
+    -->
+
     </form>
   </div>
   </div>
