--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
 <!--Mobile menu-->
 
 
-<div class="mobile-menu">
+<div class="mobile-menu is-open">
   <button class="menu-btn" type="button">
     <svg class="menu-btn-icon" width="24" heigth="24">
       <use href="./images/icons.svg#icon-close"></use>
