--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
     <div class="web-footer-top">
       <a class="web-footer-logo" href="" > <span>Web</span> Studio</a>
       <p class="web-footer-desc">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    
+    </div>
   
   <div class="web-footer-mid">
       <p class="web-footer-caption">Social media</p>
@@ -889,7 +889,7 @@
         </li>
       </ul>
   </div>
-</div>
+
 <div class="web-footer-bottom">
     <p class="web-footer-caption">Subscribe</p>
     <form class="web-footer-form">
@@ -1025,7 +1025,7 @@
 <!--Mobile menu-->
 
 
-<div class="mobile-menu is-open">
+<div class="mobile-menu">
   <button class="menu-btn" type="button">
     <svg class="menu-btn-icon" width="24" heigth="24">
       <use href="./images/icons.svg#icon-close"></use>
