--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                   <img
                   src="./images/portfolio1.jpg"
                   alt="Banking App"
-                  width="360"
+                  width="320"
                   height="300"
                 />
                 </picture>
@@ -1026,6 +1026,7 @@
 
 
 <div class="mobile-menu">
+  <div class="container mob-container">
   <button class="menu-btn" type="button">
     <svg class="menu-btn-icon" width="24" heigth="24">
       <use href="./images/icons.svg#icon-close"></use>
@@ -1103,7 +1104,7 @@
     </a>
   </li>
 </ul>
-
+</div>
   </div>
   </body>
 </html>
