--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
               </div>
               <div class="name">
                 <h3 class="list-title">Banking App</h3>
-                <p class="list-text">App</p>
+                <p class="list-text-portfolio">App</p>
               </div>
             </li>
 
@@ -534,7 +534,7 @@
               </div>
               <div class="name">
                 <h3 class="list-title">Cashless Payment</h3>
-                <p class="list-text">Marketing</p>
+                <p class="list-text-portfolio">Marketing</p>
               </div>
             </li>
 
@@ -584,7 +584,7 @@
               </div>
               <div class="name">
                 <h3 class="list-title">Meditation App</h3>
-                <p class="list-text">App</p>
+                <p class="list-text-portfolio">App</p>
               </div>
             </li>
 
@@ -630,7 +630,7 @@
               </div>
               <div class="name">
                 <h3 class="list-title">Taxi Service</h3>
-                <p class="list-text">Marketing</p>
+                <p class="list-text-portfolio">Marketing</p>
               </div>
             </li>
 
@@ -677,7 +677,7 @@
               </div>
               <div class="name">
                 <h3 class="list-title">Screen Illustrations</h3>
-                <p class="list-text">Design</p>
+                <p class="list-text-portfolio">Design</p>
               </div>
             </li>
 
@@ -724,7 +724,7 @@
               </div>
               <div class="name">
                 <h3 class="list-title">Online Courses</h3>
-                <p class="list-text">Marketing</p>
+                <p class="list-tex-portfolio">Marketing</p>
               </div>
             </li>
           </ul>
@@ -919,13 +919,14 @@
 
     </form>
   </div>
+  
   </div>
 </div>
 </footer>
 
 
         <!--Modal window-->
-    <div class="backdrop">
+    <div class="backdrop ">
       <div class="modal">
         <button class="modal-btn" type="button" aria-label="Modal close button">
           <svg class="modal-btn-icon" width="8" height="8">
