--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
 
 
         <!--Modal window-->
-    <div class="backdrop ">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-btn" type="button" aria-label="Modal close button">
           <svg class="modal-btn-icon" width="8" height="8">
@@ -1013,8 +1013,10 @@
                 <use href="./images/icons.svg#icon-checkbox"></use>
               </svg>
             </span>
+            <span>
             I accept the terms and conditions of the
             <a class="form-agreement-link" href="">Privacy Policy</a>
+          </span>
           </label>
         </div>
         
