--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <section class="hero-section">
         <div class="container">
           <h1 class="hero-section-title">
-            Effective Solutions <br />
+            Effective Solutions <br/>
             for Your Business
           </h1>
           <button type="button" class="button">Order Service</button>
@@ -826,7 +826,7 @@
 <footer class="web-footer">
   <div class="web-footer-container container">
     <div class="web-footer-top">
-      <a class="web-footer-logo" href="" > <span>Web</span> Studio</a>
+      <a class="web-footer-logo" href="" > <span>Web</span>Studio</a>
       <p class="web-footer-desc">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
   
@@ -929,7 +929,7 @@
     <div class="backdrop">
       <div class="modal">
         <button class="modal-btn" type="button" aria-label="Modal close button">
-          <svg class="modal-btn-icon" width="8" height="8">
+          <svg class="modal-btn-icon" width="24" height="24">
             <use href ="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
@@ -1007,7 +1007,7 @@
             name="user-privacy"
             value="true"
           />
-          <label class="form-label" for="user-privacy">
+          <label class="form-label-checkbox" for="user-privacy">
             <span class="form-agreement-checkbox">
               <svg class="form-agreement-icon" width="10" height="8">
                 <use href="./images/icons.svg#icon-checkbox"></use>
@@ -1028,7 +1028,7 @@
 <!--Mobile menu-->
 
 
-<div class="mobile-menu">
+<div class="mobile-menu is-open">
   <div class="container mob-container">
   <button class="menu-btn" type="button">
     <svg class="menu-btn-icon" width="24" heigth="24">
