--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
 <!--Mobile menu-->
 
 
-<div class="mobile-menu is-open">
+<div class="mobile-menu">
   <div class="container mob-container">
   <button class="menu-btn" type="button">
     <svg class="menu-btn-icon" width="24" heigth="24">
