--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
 <div class="mobile-menu">
   <div class="container mob-container">
   <button class="menu-btn" type="button">
-    <svg class="menu-btn-icon" width="24" heigth="24">
+    <svg class="menu-btn-icon-mobile" width="24" heigth="24">
       <use href="./images/icons.svg#icon-close"></use>
     </svg>
   </button>
